runpath/kube1/t/02-idevz-test-ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: idevz-test-ingress-svc-http
  namespace: idevz-k8s-test
  labels:
    app: idevz-test-ingress
spec:
  ports:
  - port: 80
    targetPort: 8888
    protocol: TCP
    name: http
  selector:
    app: idevz-test-http
---
apiVersion: v1
kind: Service
metadata:
  name: idevz-test-ingress-svc-tls
  namespace: idevz-k8s-test
  labels:
    app: idevz-test-ingress
spec:
  ports:
  - port: 443
    targetPort: 8443
    protocol: TCP
    name: https
  selector:
    app: idevz-test-http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: idevz-ingress
  namespace: idevz-k8s-test
spec:
  tls:
  - hosts:
    - idevz.org
    secretName: idevz-org-secret
  rules:
  # - host: idevz.or.com
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: idevz-test-ingress-svc-http
  #         servicePort: 80
  - host: idevz.org
    http:
      paths:
      - path: /
        backend:
          serviceName: idevz-test-ingress-svc-tls
          servicePort: 443
